--- a/src/app/features/intranet/pages/admin/email-outbox-dashboard-dia/components/dashboard-por-tipo-table/dashboard-por-tipo-table.component.scss
+++ b/src/app/features/intranet/pages/admin/email-outbox-dashboard-dia/components/dashboard-por-tipo-table/dashboard-por-tipo-table.component.scss
@@ -49,7 +49,7 @@
 		.p-datatable-table-container,
 		.p-datatable-wrapper,
 		&.p-datatable {
-			overflow-x: hidden !important;
+			overflow-x: auto !important;
 			width: 100%;
 		}
 
