--- a/src/app/features/intranet/pages/admin/email-outbox-diagnostico/_table-section.scss
+++ b/src/app/features/intranet/pages/admin/email-outbox-diagnostico/_table-section.scss
@@ -33,7 +33,7 @@
 		.p-datatable-table-container,
 		.p-datatable-wrapper,
 		&.p-datatable {
-			overflow-x: hidden !important;
+			overflow-x: auto !important;
 			width: 100%;
 		}
 
